<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_white_24dp"
            android:title="@string/message" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/timer"/>

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_opensource"
            android:icon="@drawable/ic_github"
            android:title="@string/Github"/>
    </group>


</menu>
