<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/dp_10"
        android:layout_margin="@dimen/dp_20">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_tencent"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_72"
            android:src="@drawable/ic_tencent"/>

       <TextView
           android:id="@+id/tv_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/nonlogin"
           android:paddingVertical="@dimen/dp_5"/>


           <EditText
               android:id="@+id/et_tencent_count"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/tencent_count_hint"
               android:padding="@dimen/dp_20"
               android:gravity="center"
               android:singleLine="true" />

       <Button
           android:id="@+id/btn_getdata"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/getdata"/>

    </LinearLayout>

            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:SpinKit_Color="@color/colorAccent" />
        </FrameLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>