<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_1"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/md_listitem_height"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_pride"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                app:civ_border_width="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pride"
                    android:textColor="@color/md_white_1000"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="@string/pride_sammary"
                    android:textColor="@color/md_white_1000"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="0dp"
            android:paddingStart="72dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/meprideGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:text="@string/Github"
                android:textColor="@color/md_white_1000"
                app:srcCompat="@drawable/ic_github_circle_white_24dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>